--- a/1_Zadania/Dzien_4/07_Kontrolowane_formularze/css/style.css
+++ b/1_Zadania/Dzien_4/07_Kontrolowane_formularze/css/style.css
@@ -3,6 +3,10 @@
  * Przykładowy wygląd listy rzeczy do zrobienia.
  * Pochodzi z: <http://www.w3schools.com/howto/howto_js_todolist.asp>
 */
+.toDoList {
+    width:800px;
+    margin:0 auto;
+}
 
 /* Include the padding and border in an element's total width and height */
 .toDoList * {
@@ -13,6 +17,7 @@
 .toDoList ul {
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 /* Style the list items */
@@ -106,9 +111,10 @@
     color: #555;
     float: left;
     text-align: center;
-    font-size: 16px;
+    font-size: 15px;
     cursor: pointer;
     transition: 0.3s;
+    border: 0;
 }
 
 .toDoList .addBtn:hover {
